# rust-wasm-examples

./: .gitignore  README.md
hello-world/: Cargo.toml  README.md  index.html
hello-world/src/: lib.rs
image-filter/: Cargo.toml
image-filter/wasm/: Cargo.toml
image-filter/wasm/src/: lib.rs
miner/: Cargo.toml  README.md  index.html  index.js  main.css
miner/.cargo/: config.toml
miner/app/: .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
miner/app/src/: index.tsx  types.ts
miner/app/src/components/: MiningResultBox.tsx  MiningResultChart.tsx
miner/app/src/worker/: js_worker.ts  wasm_worker.ts
miner/src/: lib.rs
todo-list/: .gitignore  README.md
todo-list/backend/: Cargo.toml  build.rs  todos.db
todo-list/backend/.sqlx/: query-73d9d87be304188c41bd98bb15133f221882b60bc8f9f745e5113d7bcda157ed.json  query-869b99f2ad7f0b205c9a74482e8ae0ef49a82647f5c6f5c8e0356be5588fbb06.json  query-9832576aa81ee68dc6d9f23362dce4898fde97744b4167574d3727ce90bee631.json  query-bf3fc4c16d4a46dabd283e733be199f9f6c4ae716b13105c96bc6c2229c9e3c3.json  query-cf56f29ffeac185c9acfb731000586d29940dc0ea22286869048df6033dd2bac.json
todo-list/backend/migrations/: 20241130095955_init.up.sql
todo-list/backend/src/: main.rs
todo-list/backend/src/db/: mod.rs
todo-list/common/: Cargo.toml
todo-list/common/src/: lib.rs
todo-list/frontend/: Cargo.toml  Trunk.toml  index.html  main.scss
todo-list/frontend/src/: api.rs  main.rs
todo-list/frontend/src/components/: mod.rs
todo-list/frontend/src/pages/: mod.rs
