[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
sha2 = "0.10"
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3.4"
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']
