[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
rayon = "1.8"
wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
async-std = "1.10"

[dependencies.web-sys]
version = "0.3.4"
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']
