[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = ["console", "HtmlElement", "MouseEvent", "DomRect"]
